--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,15 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+      <link rel="apple-touch-icon" sizes="152x152" href="<%= BASE_URL %>apple-touch-icon.png">
+      <link rel="icon" type="image/png" sizes="32x32" href="<%= BASE_URL %>favicon-32x32.png">
+      <link rel="icon" type="image/png" sizes="16x16" href="<%= BASE_URL %>favicon-16x16.png">
+      <link rel="manifest" href="<%= BASE_URL %>site.webmanifest">
+      <link rel="mask-icon" href="<%= BASE_URL %>safari-pinned-tab.svg" color="#79cbb8">
+      <link rel="shortcut icon" href="<%= BASE_URL %>favicon.ico">
+      <meta name="msapplication-TileColor" content="#79cbb8">
+      <meta name="msapplication-config" content="<%= BASE_URL %>browserconfig.xml">
+      <meta name="theme-color" content="#79cbb8">
     <title><%= htmlWebpackPlugin.options.title %></title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
